# graph-cli

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
catalog/: _schemas.yaml  audit_logs.yaml  compliance.yaml  conditional_access.yaml  devices.yaml  groups.yaml  policies.yaml  users.yaml
catalog/_hunts/: device_compliance_failures.kql  recent_signins_from_new_country.kql  risky_admin_activity.kql
docs/: quickstart.md  troubleshooting.md
src/daf_graph_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/graph_cli/: __init__.py  _ps_host.py  audit.py  auth.py  catalog.py  executor.py  main.py  output.py  safety.py  types.py
src/graphconnect/: __init__.py  __main__.py  _ps_host.py  audit.py  audit_reader.py  auth.py  catalog.py  doctor.py  executor.py  main.py  output.py  safety.py  types.py
src/graphconnect/auth/: __init__.py  app_only.py  delegated.py  powershell.py  profiles.py
src/graphconnect/commands/: change.py  explain.py  find.py  hunt.py  raw.py  show.py  trace.py
src/graphconnect/explain/: __init__.py  _intune_reports.py  _postprocess.py  _resolve.py  _transport.py  assignment_drift.py  enrollment_failure.py  noncompliance.py  policy_failure.py
src/graphconnect/selectors/: __init__.py  _model.py  resolvers.py
src/graphconnect/transport/: __init__.py  client.py  consistency.py  national_cloud.py  pagination.py  throttle.py
tests/: test_auth_probes.py  test_auth_profiles.py  test_cli.py  test_cmd_change.py  test_cmd_explain.py  test_cmd_find.py  test_cmd_hunt.py  test_cmd_raw.py  test_cmd_show.py  test_cmd_trace.py  test_envelope.py  test_executor.py  test_output_envelope.py  test_ps_host.py  test_selectors.py  test_transport.py
