[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphconnect"
version = "0.1.0"
description = "Opinionated Microsoft Graph operator CLI for Intune and Entra workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["microsoft-graph", "intune", "entra", "powershell", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "msgraph-sdk>=1.55.0,<2",
    "azure-identity>=1.25.0,<2",
    "typer>=0.15.0,<1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
]

[project.scripts]
graphconnect = "graphconnect.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
